--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   
-"homepage": "https://BunnyKarru.github.io/myKitchen",
+
   "name": "mykitchen",
   "private": true,
   "version": "0.0.0",
@@ -9,9 +9,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
